# aoc

2021/: pyproject.toml
2021/day01/: puzzle1.py  puzzle2.py
2021/day02/: puzzle.py
2021/day03/: puzzle.py
2021/day04/: puzzle.py
2021/day06/: puzzle.py
2021/day09/: puzzle.py
2021/day10/: puzzle.py
2021/sidequest/: problem01.py  problem02.py  readme.md
