[tool.poetry]
name = "aoc-metmac-2021"
version = "0.1.0"
description = "metmac's attempt at aoc in the year of our lord 2021"
authors = ["Michael Metcalf <michael@metmac.dev>"]

[tool.poetry.dependencies]
python = "^3.9"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
